src/app/components/navbar/navbar.component.css
.NavBar {
    
    a {
        text-decoration: none;
    }
    
    nav {
        /* max-width: 1200px; */
        margin: auto;
        padding: 1rem 1.5rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 2rem;
        height: 50px;
    }
    
    .nav-logo{
        max-width: 170px;
        h1{
            font-weight: 600;
            /* color: var(--text-light); */
            font-family: "Montserrat", sans-serif;
        }
    }
    
    .nav-links{
        list-style: none;
        display: flex;
        align-items: center;
        gap: 3rem;
    }

    a {
        background-color: #cbcbde00;
        border: none;
        cursor: pointer;
        font-size: 16px;
        font-weight: 500;
        color: var(--text-light);
        transition: .3s;
    }

    a:hover {
        transform: scale(1.2);
        color: var(--details-lilac);
    }
    
    @media (max-width: 768px){
        .nav-links{
            display: flex;
            flex-direction: column;
            align-items: baseline;
            justify-content: baseline;
            gap: 2rem;
            position: absolute;
            top: 80px;
            left: 0;
            background-color: white;
            width: 100%;
            height: 0;
            overflow-y: hidden;
            visibility: hidden;
            transition: .6s;
        }
    
        .nav-links.active{
            display: flex;
            visibility: visible;
            height: calc(100vh - 80px);
        }
    
        .nav-links.active li{
            font-size: 2rem;
            font-weight: 500;
        }
    
        span {
            border-top: 2px solid;
            width: 25px;
            color: var(--text-light);
            display: block;
            cursor: pointer;
        }
    
        span::before, span::after{
            content: '';
            display: block;
            width: 25px;
            height: 2px;
            background-color:currentColor;
            transition: .3s;
            margin-top: 5px;
            position: relative;
        }
    
        span.active {
            border-top: transparent;
        }
    
        span.active::before{
            transform: rotate(135deg);
        }
    
        span.active::after{
            transform: rotate(-135deg);
            top: -7px;
        }
    
    
    }
}

